# Thesis

./: Dockerfile  LICENSE  README.md  meson.build
include/: basic_diff_result.hpp  bitsets_diff.hpp  data_manager.hpp  database.hpp  diff_result.hpp  diff_strategy.hpp  high_diff_result.hpp  high_level_diff.hpp  kyoto_database.hpp  map_database.hpp  mem_data_manager.hpp  mem_high_level_diff.hpp  multi_kyoto_database.hpp  para_parser.hpp  parser.hpp  rocks_database.hpp  shared_dataset_info.hpp  tsv_parser.hpp  vsi.hpp
src/: main.cpp  main_high_diff.cpp  main_mem_high_diff.cpp  meson.build
src/DBUtils/: data_manager.cpp  kyoto_database.cpp  map_database.cpp  mem_data_manager.cpp  multi_kyoto_database.cpp  rocks_database.cpp
src/Diffs/: basic_diff_result.cpp  bitsets_diff.cpp  high_diff_result.cpp  high_level_diff.cpp  mem_high_level_diff.cpp
src/RDF-Parsers/: para_parser.cpp  shared_dataset_info.cpp  tsv_parser.cpp
src/Utils/: example.txt  high_diff_all.py  high_gen_comp.py  low_diff_all.py  low_gen_comp.py  readme.txt
